# Meta_Hackathon_smart-energy

./: Dockerfile  README.md  __init__.py  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
Smart-Building-Energy-v2/: app.py  pyproject.toml
Smart-Building-Energy-v2/env/: energy_env.py
Smart-Building-Energy-v2/tests/: test_env.py
models/: schemas.py
server/: app.py
tasks/: __init__.py  task_definitions.py
